# MiniQuantDeskV4

./: .env.local.example  .gitattributes  .gitignore  AI_OPERATOR_CONTEXT.md  APPLY_GUI_FUTURE_BUNDLES.ps1  CLAUDE.md  CLAUDE_PATCH_RUNBOOK_AUDIT.md  LICENSE  MiniQuantDeskV4_Foundation_Patch_Tracker.md  MiniQuantDeskV4_Patch_By_Patch_Implementation_Plan.md  MiniQuantDeskV4_Spine_FileMap_GapFill_Institutional_Addendum.md  MiniQuantDesk_V4_90plus_Patch_Tracker.md  MiniQuantDesk_V4_Master_Patch_Plan_v2.md  PATCH_TRACKER.md  README.md  README_TECHNICAL.md  autonomous_reality_test_paper.ps1.ps1  backfill_daily_bars.ps1  bootstrap_research_py.ps1  export_mqd_audit_bundle.ps1  full_repo_proof.ps1  mqk_autonomous_paper_reality_test_with_env_loader_fixed_ps51.ps1  package-lock.json  patch_tracker_updated.md  snapshotcommand.ps1
core-rs/: APPLY_BACKTEST_PATCHSET.ps1  Cargo.toml
core-rs/crates/mqk-artifacts/: Cargo.toml
core-rs/crates/mqk-artifacts/src/: lib.rs
core-rs/crates/mqk-audit/: Cargo.toml
core-rs/crates/mqk-audit/src/: lib.rs
core-rs/crates/mqk-audit/tests/: scenario_audit_chain_anchor.rs  scenario_causal_chain_linkage.rs  scenario_hash_chain_tamper_detected.rs  scenario_log_durability_policy.rs
core-rs/crates/mqk-backtest/: Cargo.toml
core-rs/crates/mqk-backtest/src/: corporate_actions.rs  engine.rs  lib.rs  loader.rs  types.rs
core-rs/crates/mqk-backtest/tests/: determinism_smoke.rs  scenario_allocation_cap_enforced.rs  scenario_ambiguity_worst_case_enforced.rs  scenario_backtest_live_semantics_alignment.rs  scenario_commission_modeling_bkt03p.rs  scenario_config_hash_stable_bkt02p.rs  scenario_conservative_defaults_are_conservative.rs  scenario_corporate_action_policy.rs  scenario_fill_provenance_bkt01p.rs  scenario_lookahead_bias_proof.rs  scenario_negative_slippage_rejected.rs  scenario_no_same_bar_fill_by_default.rs  scenario_order_log_bkt04p.rs  scenario_replay_determinism.rs  scenario_stale_data_stops_execution.rs  scenario_strategy_identity_bkt05p.rs  scenario_stress_battery_gate.rs  scenario_stress_impact_measurable.rs  scenario_volatility_slippage_scales_with_spread.rs
core-rs/crates/mqk-broker-alpaca/: Cargo.toml  README.md
core-rs/crates/mqk-broker-alpaca/src/: client.rs  config.rs  gateway_scaffold.rs  inbound.rs  lib.rs  normalize.rs  snapshot.rs  types.rs
core-rs/crates/mqk-broker-alpaca/tests/: scenario_alpaca_contract_a5.rs  scenario_alpaca_event_mapping_brk0346r.rs  scenario_alpaca_inbound_brk08r.rs  scenario_alpaca_inbound_lifecycle_a5.rs  scenario_alpaca_live_adapter_a5.rs  scenario_alpaca_snapshot_ap03.rs
core-rs/crates/mqk-broker-paper/: Cargo.toml
core-rs/crates/mqk-broker-paper/src/: fill_engine.rs  lib.rs  types.rs
core-rs/crates/mqk-cli/: Cargo.toml
core-rs/crates/mqk-cli/src/: main.rs
core-rs/crates/mqk-cli/tests/: scenario_cli_arm_requires_confirmation.rs  scenario_cli_db_migrate_requires_yes_when_live_active.rs  scenario_cli_halt_stops_execution.rs
core-rs/crates/mqk-config/: Cargo.toml
core-rs/crates/mqk-config/src/: consumption.rs  lib.rs  secrets.rs
core-rs/crates/mqk-config/tests/: scenario_config_hash_stable.rs  scenario_secrets_excluded.rs  scenario_secrets_mode_enforcement.rs  scenario_unused_keys_warn_or_fail.rs
core-rs/crates/mqk-daemon/: Cargo.toml
core-rs/crates/mqk-daemon/src/: api_types.rs  artifact_intake.rs  bind.rs  capital_policy.rs  cors.rs  decision.rs  dev_gate.rs  lib.rs  main.rs  mode_transition.rs  notify.rs  parity_evidence.rs  routes.rs  state.rs  suppression.rs
core-rs/crates/mqk-daemon/tests/: scenario_a3_a4_operator_surfaces.rs  scenario_alerts_events_cc06.rs  scenario_alerts_triage_ops02.rs  scenario_alpaca_paper_ws_transport_brk00r05.rs  scenario_artifact_deployability_tv02.rs  scenario_artifact_intake_tv01b.rs  scenario_artifact_provenance_tv01cd.rs  scenario_artifact_schema_lock_tv01a.rs  scenario_asset_class_scope_b8.rs  scenario_audit_ops_lo03g.rs  scenario_auton_hist_durability_ah01.rs  scenario_autonomous_calendar_ac01.rs  scenario_autonomous_gate_parity_auton11.rs  scenario_autonomous_paper_day_auton01.rs  scenario_autonomous_paper_day_lifecycle_auton12.rs  scenario_autonomous_readiness_auton_truth01.rs  scenario_capital_policy_tv04.rs  (+85 more)
core-rs/crates/mqk-db/: Cargo.toml
core-rs/crates/mqk-execution/: Cargo.toml
core-rs/crates/mqk-integrity/: Cargo.toml
core-rs/crates/mqk-isolation/: Cargo.toml
core-rs/crates/mqk-md/: Cargo.toml
core-rs/crates/mqk-portfolio/: Cargo.toml
core-rs/crates/mqk-promotion/: Cargo.toml
core-rs/crates/mqk-reconcile/: Cargo.toml
core-rs/crates/mqk-risk/: Cargo.toml
core-rs/crates/mqk-runtime/: Cargo.toml
core-rs/crates/mqk-schemas/: Cargo.toml
core-rs/crates/mqk-strategy/: Cargo.toml
core-rs/crates/mqk-testkit/: Cargo.toml
core-rs/migrations/: 20260303_000001_runtime_leader_lease.sql
core-rs/mqk-gui/: GUI_OPTIONAL_PANELS_BACKLOG.md  GUI_PATCH_TRACKER.md  package-lock.json  package.json
core-rs/mqk-gui/src/: App.tsx  config.ts  main.tsx  styles.css
core-rs/mqk-gui/src-tauri/: tauri.conf.json
core-rs/mqk-gui_backup_before_overwrite/src/: config.ts
core-rs/mqk-gui_backup_before_overwrite/src-tauri/: Cargo.toml
core-rs/mqk-gui_backup_before_overwrite_2/: package-lock.json
core-rs/mqk-gui_backup_before_overwrite_2/src/: App.css  App.tsx
research-py/: RESEARCH_TODO_PHASE2.md  pyproject.toml
research-py/experiments/: README.md
research-py/experiments/example_momentum/: config.yaml  run.py
research-py/experiments/exp_distributed/: README.md  example_batch.json  sample_prices.csv
research-py/experiments/exp_meanrev_v1/: README.md  config.yaml  run.py  sample_bars.csv  smoke_check.py  test_exp_meanrev_v1.py
research-py/src/mqk_research/: cli.py  contracts.py
research-py/src/mqk_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
research-py/tests/: __init__.py  test_artifact_contract.py  test_backtest_parity_provenance_bkt_prov02.py  test_deployability_gate.py  test_exp_distributed.py  test_non_equity_research.py  test_parity_evidence.py  test_portfolio_selection_tv04.py
(+564 files in other folders)
