[workspace]
resolver = "2"

members = [
  "crates/mqk-isolation",
  "crates/mqk-schemas",
  "crates/mqk-config",
  "crates/mqk-db",
  "crates/mqk-audit",
  "crates/mqk-artifacts",
  "crates/mqk-cli",
  "crates/mqk-testkit",
  "crates/mqk-execution",
  "crates/mqk-portfolio",
  "crates/mqk-risk",
  "crates/mqk-integrity",
  "crates/mqk-reconcile",
  "crates/mqk-strategy",
  "crates/mqk-backtest",
  "crates/mqk-promotion",
  "crates/mqk-broker-paper",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Proprietary"
publish = false

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

# SQLx pinned here so crates can use `workspace = true` without duplicating versions.
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "json"] }
