[workspace]
resolver = "2"

members = [
  "crates/mqk-isolation",
  "crates/mqk-schemas",
  "crates/mqk-config",
  "crates/mqk-db",
  "crates/mqk-audit",
  "crates/mqk-artifacts",
  "crates/mqk-cli",
  "crates/mqk-testkit",
  "crates/mqk-execution",
  "crates/mqk-portfolio",
  "crates/mqk-risk",
  "crates/mqk-integrity",
  "crates/mqk-reconcile",
  "crates/mqk-strategy",
  "crates/mqk-backtest",
  "crates/mqk-promotion",
  "crates/mqk-broker-paper",
  "crates/mqk-broker-alpaca",
  "crates/mqk-daemon",
  "crates/mqk-runtime",

  # PATCH C: provider abstraction crate (historical ingest providers)
  "crates/mqk-md",
]

exclude = [
  "mqk-gui/src-tauri"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Proprietary"
publish = false

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
# PATCH S1: dotenv bootstrap for dev-time .env.local loading
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "v5"] }

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

# ✅ Needed for BroadcastStream (feature-gated behind "sync")
tokio-stream = { version = "0.1", features = ["sync"] }

# SQLx pinned here so crates can use `workspace = true` without duplicating versions.
# DEP-GOV-01: sqlx-postgres 0.7.4 triggers a never-type-fallback future-incompatibility
# warning (hard error in Rust 2024 edition). Fix = upgrade to sqlx 0.8. Deferred due to
# semver-major API audit scope. See: docs/ci/dependency_governance.md
#
# Feature set rationale:
#   runtime-tokio   — async Tokio runtime
#   postgres        — PostgreSQL driver
#   macros          — sqlx::query! / query_as! compile-time checked macros
#   chrono          — DateTime<Utc> bind/decode
#   uuid            — Uuid bind/decode
#   json            — serde_json Value bind/decode
#   tls-native-tls  — TLS for PostgreSQL connections (required for remote/production DB)
#                     DEP-GOV-01: previously declared only in mqk-db inline; now hoisted
#                     here so all consumers inherit TLS support uniformly. The check_workspace_dep_inheritance
#                     guard enforces no crate overrides this with an inline version pin.
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "json", "tls-native-tls"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# BRK-00R-05: Alpaca paper WebSocket transport.
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
