[package]
name = "mqk-broker-alpaca"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

mqk-execution = { path = "../mqk-execution" }

# Keep reqwest optional until you implement real network calls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
default = []
net = ["dep:reqwest"]
