[package]
name = "mqk-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

mqk-config = { path = "../mqk-config" }
mqk-db = { path = "../mqk-db" }
mqk-audit = { path = "../mqk-audit" }
mqk-artifacts = { path = "../mqk-artifacts" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls"] }
