[package]
name = "mqk-cli"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "mqk-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
# PATCH S1: dev-time .env.local bootstrap
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

# Internal crates: use path deps (do NOT rely on workspace.dependencies.* being defined)
mqk-audit = { path = "../mqk-audit" }
mqk-artifacts = { path = "../mqk-artifacts" }
mqk-config = { path = "../mqk-config" }
mqk-db = { path = "../mqk-db" }
mqk-backtest = { path = "../mqk-backtest" }
mqk-execution = { path = "../mqk-execution" }
mqk-strategy = { path = "../mqk-strategy" }
mqk-md = { path = "../mqk-md" }
mqk-testkit = { path = "../mqk-testkit" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "tls-native-tls"] }
