[package]
name = "mqk-cli"
version = "0.0.1"
edition = "2021"

[features]
# RT-2: enables run_execute (NullBroker/PassGate stubs) and BrokerGateway::for_test.
# RT-8: also gates run_loop (mqk_testkit::Orchestrator) out of the production binary.
# Propagates testkit to mqk-execution + mqk-runtime so test-only wiring is callable.
# MUST NOT be enabled in production deployments.
testkit = [
  "dep:mqk-testkit",
  "mqk-execution/testkit",
  "mqk-runtime/testkit",
]

[[bin]]
name = "mqk_paper_loop"
path = "src/bin/mqk_paper_loop.rs"
required-features = ["testkit"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
# PATCH S1: dev-time .env.local bootstrap
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

# Internal crates: use path deps (do NOT rely on workspace.dependencies.* being defined)
mqk-audit = { path = "../mqk-audit" }
mqk-artifacts = { path = "../mqk-artifacts" }
mqk-config = { path = "../mqk-config" }
mqk-db = { path = "../mqk-db" }
mqk-backtest = { path = "../mqk-backtest" }
mqk-execution = { path = "../mqk-execution" }
mqk-strategy = { path = "../mqk-strategy" }
mqk-md = { path = "../mqk-md" }
mqk-testkit = { path = "../mqk-testkit", optional = true }
mqk-runtime = { path = "../mqk-runtime" }
mqk-portfolio = { path = "../mqk-portfolio" }
mqk-reconcile = { path = "../mqk-reconcile" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "tls-native-tls"] }
