[package]
name = "mqk-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mqk-daemon"
path = "src/main.rs"

[lib]
name = "mqk_daemon"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true

# ✅ for BroadcastStream
tokio-stream.workspace = true

# DB access (optional now, but you'll want it)
sqlx.workspace = true

# Your internal crates (hook these in as you wire real status/control)
mqk-db = { path = "../mqk-db" }
mqk-testkit = { path = "../mqk-testkit" }
mqk-integrity = { path = "../mqk-integrity" }
mqk-audit = { path = "../mqk-audit" }

[dev-dependencies]
# Required for in-process Axum router testing via tower::ServiceExt::oneshot()
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
