[package]
name = "mqk-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mqk-daemon"
path = "src/main.rs"

[lib]
name = "mqk_daemon"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
# PATCH S1: dev-time .env.local bootstrap
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
uuid.workspace = true

axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true

# ✅ for BroadcastStream
tokio-stream.workspace = true

# DB access (optional now, but you'll want it)
sqlx.workspace = true

# Your internal crates (hook these in as you wire real status/control)
mqk-db = { path = "../mqk-db" }
mqk-testkit = { path = "../mqk-testkit" }
mqk-integrity = { path = "../mqk-integrity" }
mqk-audit = { path = "../mqk-audit" }
mqk-schemas = { path = "../mqk-schemas" }
mqk-reconcile = { path = "../mqk-reconcile" }
mqk-runtime = { path = "../mqk-runtime" }
mqk-execution = { path = "../mqk-execution" }
mqk-broker-paper = { path = "../mqk-broker-paper" }
mqk-broker-alpaca = { path = "../mqk-broker-alpaca" }
mqk-portfolio = { path = "../mqk-portfolio" }

[dev-dependencies]
# Required for in-process Axum router testing via tower::ServiceExt::oneshot()
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
