[package]
name = "mqk-execution"
version = "0.1.0"
edition = "2021"

[features]
# Allows construction of BrokerGateway via mqk-execution::wiring
runtime-boundary = []
# RT-2: gates BrokerGateway::for_test. Only test crates and mqk-cli
# (via its own testkit feature) should activate this. MUST NOT appear
# in production [dependencies] of mqk-daemon, mqk-runtime, or mqk-cli.
testkit = []

[dependencies]
serde = { workspace = true }
mqk-db = { path = "../mqk-db" }
mqk-schemas = { path = "../mqk-schemas" }

[dev-dependencies]
# Activates OutboxClaimToken::for_test for integration tests and internal
# harnesses; not permitted in prod crates.
mqk-db = { path = "../mqk-db", features = ["testkit"] }