[package]
name = "mqk-execution"
version = "0.1.0"
edition = "2021"

[features]
# Allows construction of BrokerGateway via mqk-execution::wiring
runtime-boundary = []
# RT-2: gates BrokerGateway::for_test. Only test crates and mqk-cli
# (via its own testkit feature) should activate this. MUST NOT appear
# in production [dependencies] of mqk-daemon, mqk-runtime, or mqk-cli.
testkit = []

[dependencies]
serde = { workspace = true }
mqk-db = { path = "../mqk-db" }
mqk-schemas = { path = "../mqk-schemas" }

[dev-dependencies]
# Activates OutboxClaimToken::for_test for integration tests and internal
# harnesses; not permitted in prod crates.
mqk-db = { path = "../mqk-db", features = ["testkit"] }

# RT-2: integration tests that call BrokerGateway::for_test or
# OutboxClaimToken::for_test must activate the testkit feature.
# Without it the lib is compiled without cfg(test) so for_test is absent.
[[test]]
name = "scenario_gateway_no_bypass"
required-features = ["testkit"]

[[test]]
name = "scenario_cancel_replace_provenance"
required-features = ["testkit"]

[[test]]
name = "scenario_outbox_first_submit"
required-features = ["testkit"]

[[test]]
name = "prover_gateway_for_test_rt2"
required-features = ["testkit"]