[package]
name = "mqk-promotion"
version = "0.1.0"
edition = "2021"

[dependencies]
mqk-artifacts = { path = "../mqk-artifacts" }    # Patch B6: RunManifest
mqk-audit = { path = "../mqk-audit" }            # Patch B6: verify_hash_chain_str
mqk-backtest = { path = "../mqk-backtest" }
mqk-portfolio = { path = "../mqk-portfolio" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }      # Patch B6 tests: AuditWriter::append
