[package]
name = "mqk-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sqlx.workspace = true

# RT-1: runtime-claim is the ONLY production activation of outbox_claim_batch.
# No other crate's [dependencies] may enable this feature.
mqk-db = { path = "../mqk-db", features = ["runtime-claim"] }

mqk-execution = { path = "../mqk-execution", features = ["runtime-boundary"] }
mqk-portfolio = { path = "../mqk-portfolio" }

mqk-broker-paper = { path = "../mqk-broker-paper" }

[features]
# Patch 1: test-only wiring helpers (e.g., PassGate paper gateway).
# MUST NOT be enabled in production deployments.
testkit = ["mqk-execution/testkit"]