[package]
name = "mqk-testkit"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

mqk-schemas = { path = "../mqk-schemas" }
mqk-artifacts = { path = "../mqk-artifacts" }
mqk-config = { path = "../mqk-config" }
mqk-audit = { path = "../mqk-audit" }
