[package]
name = "mqk-testkit"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

mqk-schemas   = { path = "../mqk-schemas" }
mqk-artifacts = { path = "../mqk-artifacts" }
mqk-config    = { path = "../mqk-config" }
mqk-audit     = { path = "../mqk-audit" }
mqk-db        = { path = "../mqk-db" }
mqk-backtest  = { path = "../mqk-backtest" }
mqk-integrity = { path = "../mqk-integrity" }
mqk-strategy  = { path = "../mqk-strategy" }
mqk-execution = { path = "../mqk-execution" }
mqk-portfolio = { path = "../mqk-portfolio" }
mqk-risk      = { path = "../mqk-risk" }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Needed by the scenario test:
mqk-broker-paper = { path = "../mqk-broker-paper" }
mqk-reconcile    = { path = "../mqk-reconcile" }
