[package]
name = "mqk-testkit"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

mqk-schemas   = { path = "../mqk-schemas" }
mqk-artifacts = { path = "../mqk-artifacts" }
mqk-config    = { path = "../mqk-config" }
mqk-audit     = { path = "../mqk-audit" }
mqk-db        = { path = "../mqk-db" }
mqk-backtest  = { path = "../mqk-backtest" }
mqk-integrity = { path = "../mqk-integrity" }
mqk-strategy  = { path = "../mqk-strategy" }
mqk-execution = { path = "../mqk-execution" }
mqk-portfolio = { path = "../mqk-portfolio" }
mqk-risk      = { path = "../mqk-risk" }

# DEP-GOV-01: workspace = true so sqlx upgrade propagates automatically.
sqlx.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Activates OutboxClaimToken::for_test for all scenario tests under tests/.
# MUST NOT be moved to [dependencies] — that would propagate testkit into
# mqk-daemon and mqk-cli production builds via transitive dependency.
mqk-db = { path = "../mqk-db", features = ["testkit"] }

# RT-2: activates BrokerGateway::for_test for scenario tests under tests/.
# MUST NOT be moved to [dependencies] — same transitive propagation concern.
mqk-execution = { path = "../mqk-execution", features = ["testkit"] }

# Needed by the scenario tests:
mqk-broker-paper = { path = "../mqk-broker-paper" }
mqk-reconcile    = { path = "../mqk-reconcile" }
# I9-1: invariant-violation halt/disarm scenario requires ExecutionOrchestrator.
mqk-runtime      = { path = "../mqk-runtime" }
